changed style and added files for each css component

--- a/index.html
+++ b/index.html
@@ -12,32 +12,52 @@
     <meta property="og:description" content="Fullstack developer based in Tokyo. Come and see what new projects I've been working on." />
     <meta property="og:image" content="assets/images/" />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/stylesheets/style.css">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
   </head>
 
   <body>
-    <div class="banner">
-      <h1>Steven Vasquez</h1>
-      <h2>Fullstack Developer</h2>
-      <h2>Ruby on Rails | JavaScript</h2>
-      <a href="#">Connect with me</a>
-    </div>
     <div class="container">
-      <div class="card-white">
-        <h2>Projects</h2>
-        <h2>Projects</h2>
-        <h2>Projects</h2>
-        <h2>Projects</h2>
+      <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
+    url(assets/images/sunset.JPG);">
+        <div class="centered-container">
+          <div class="centered-contents">
+            <div>
+              <h1>Steven Vasquez</h1>
+              <h2>Fullstack Developer</h2>
+              <h2>Ruby on Rails | JavaScript</h2>
+              <a href="#">Connect with me</a>
+            </div>
+          </div>
+        </div>
       </div>
+      <div class="project-container">
+        <div class="centered-container">
+          <h2>A little about me</h2>
+          <div class="centered-contents">
+            <div>
+              <img src="assets/images/profile.JPG" class="avatar" alt="avatar">
+            </div>
+            <div>
+              <p>Tokyo based Fullstack Developer originally from Brooklyn, NY</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-white">
+          <h2>Projects</h2>
+          <h2>Projects</h2>
+          <h2>Projects</h2>
+          <h2>Projects</h2>
+        </div>
+      </div>
+      <div class="footer">
+        <p>Check me out</p>
+        <p>Check me out</p>
+        <p>Check me out</p>
+        <p>Check me out</p>
+        <p>Check me out</p>
+      </div>
+      <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     </div>
-    <div class="footer">
-      <p>Check me out</p>
-      <p>Check me out</p>
-      <p>Check me out</p>
-      <p>Check me out</p>
-      <p>Check me out</p>
-    </div>
-    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
   </body>
 </html>
