--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
               <h1>Steven Vasquez</h1>
               <h2>Fullstack Developer</h2>
               <h2>Ruby on Rails | JavaScript</h2>
-              <a href="#">Connect with me</a>
             </div>
           </div>
         </div>
@@ -40,21 +39,20 @@
             </div>
             <div>
               <p>Tokyo based Fullstack Developer originally from Brooklyn, NY</p>
+              <a href="#">Connect with me</a>
             </div>
           </div>
         </div>
-        <div class="card-white">
+        <div class="centered-container">
           <h2>Projects</h2>
-          <h2>Projects</h2>
-          <h2>Projects</h2>
-          <h2>Projects</h2>
+          <div class="project-container">
+            <div class="project">
+              <h3>Chirpy</h3>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer">
-        <p>Check me out</p>
-        <p>Check me out</p>
-        <p>Check me out</p>
-        <p>Check me out</p>
         <p>Check me out</p>
       </div>
       <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
