--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div>
               <p>Tokyo based Fullstack Developer originally from Brooklyn, NY ...</p>
-              <a href="#">Connect with me</a>
+              <a href="assets/stevenvasquezCV.pdf" class="button-rise">My resume</a>
             </div>
           </div>
         </div>
