--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
   </head>
 
   <body>
-    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
-        url(assets/images/sunset.JPG);">
-      <div class="centered-container">
-        <div class="centered-contents">
+    <div class="centered-container">
+      <div class="centered-contents">
+        <div class="banner">
+          <div>
+            <img src="assets/images/profile.JPG" class="avatar" alt="avatar">
+          </div>
           <div>
             <h1>Steven Vasquez</h1>
             <h2>Fullstack Developer</h2>
@@ -37,11 +39,8 @@
           <h3>A little about me</h3>
           <div class="centered-contents">
             <div>
-              <img src="assets/images/profile.JPG" class="avatar" alt="avatar">
-            </div>
-            <div>
               <p>Tokyo based Fullstack Developer originally from Brooklyn, NY ...</p>
-              <a href="assets/stevenvasquezCV.pdf" class="button-rise">My resume</a>
+              <a href="assets/stevenvasquezCV.pdf" class="button">My resume</a>
             </div>
           </div>
         </div>
