--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/stylesheets/style.css">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.0/devicon.min.css">
+    <script src="https://kit.fontawesome.com/c0265d2c39.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
-    <div class="centered-container">
-      <div class="centered-contents">
-        <div class="banner">
+    <div class="container py-5">
+      <div class="centered-container">
+        <div class="centered-contents">
           <div>
             <img src="assets/images/profile.JPG" class="avatar" alt="avatar">
           </div>
@@ -32,62 +34,131 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="project-container">
-        <div class="centered-container">
-          <h3>A little about me</h3>
-          <div class="centered-contents">
-            <div>
-              <p>Tokyo based Fullstack Developer originally from Brooklyn, NY ...</p>
-              <a href="assets/stevenvasquezCV.pdf" class="button">My resume</a>
-            </div>
+      <div class="centered-container" id="left">
+        <h3>A little about me</h3>
+        <div class="about-content">
+          <p>Hi! I'm a Tokyo based Fullstack Developer originally from New York with a background in psychology and education.</p>
+          <p>I enjoy programming because it provides a good test of my problem-solving skills as well as pushing my creativity to new heights.</p>
+          <!-- <p>On my free time, I enjoy going for a run surrounded by nature or relaxing at home playing an engaging RPG.</p> -->
+          <p>Feel free to connect with me on LinkedIn!</p>
+          <div>
+            <!-- <a href="assets/stevenvasquezCV.pdf" class="button">My resume</a> -->
+            <a href="https://www.linkedin.com/in/stevenvasquez85/" id="social-icon"><i class="fa-brands fa-linkedin"></i></a>
           </div>
         </div>
-        <div class="centered-container">
-          <h3>Projects</h3>
-          <div class="project-container">
-            <div class="project">
-              <div class="card mb-3" style="max-width: 1075px;">
-                <div class="row g-0">
-                  <div class="col-md-6 col-lg-5">
-                    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                      <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                          aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                          aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                          aria-label="Slide 3"></button>
-                      </div>
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <img src="assets/images/chirpy.png" class="d-block w-100" alt="chirpy">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="assets/images/chirpy2.png" class="d-block w-100" alt="chirpy2">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="assets/images/chirpy3.png" class="d-block w-100" alt="chirpy3">
-                        </div>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
+      </div>
+      <div class="centered-container">
+        <h3>Projects</h3>
+        <div class="project-container">
+          <div class="project">
+            <div class="card mb-3" style="max-width: 1075px;">
+              <div class="row g-0">
+                <div class="col-md-6 col-lg-5">
+                  <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                     </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="assets/images/chirpy.png" class="d-block w-100" alt="chirpy">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/chirpy2.png" class="d-block w-100" alt="chirpy2">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/chirpy3.png" class="d-block w-100" alt="chirpy3">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
                   </div>
-                  <div class="col-md-6 col-lg-7 border-start">
-                    <div class="card-body">
-                      <h5 class="card-title">Chirpy</h5>
-                      <p class="card-text">This is an app for parents to help filter out content that their children see online</p>
-                      <p class="card-text">Built a Chrome extension that connects to the Chirpy site </p>
-                      <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+                </div>
+                <div class="col-md-6 col-lg-7 border-start">
+                  <div class="card-body">
+                    <h4 class="card-title">Chirpy</h4>
+                    <p class="card-text">This is an app for parents to help filter out content that their children see online</p>
+                    <p class="card-text">Built a Chrome extension that connects to the Chirpy site </p>
+                    <h5>Built with:</h5>
+                    <div id="social-icon">
+                      <i class="devicon-rails-plain-wordmark"></i>
+                      <i class="devicon-postgresql-plain-wordmark"></i>
+                      <i class="devicon-heroku-original-wordmark"></i>
+                      <i class="devicon-javascript-plain"></i>
                     </div>
+                    <div class="mt-3">
+                      <a href="https://www.chirpyapp.net/" class="button-green">App</a>
+                      <a href="#" class="button-green">Github</a>
+                    </div>
+                    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="card mb-3" style="max-width: 1075px;">
+              <div class="row g-0">
+                <div class="col-md-6 col-lg-5">
+                  <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="assets/images/chirpy.png" class="d-block w-100" alt="chirpy">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/chirpy2.png" class="d-block w-100" alt="chirpy2">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/chirpy3.png" class="d-block w-100" alt="chirpy3">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                      data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                      data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-7 border-start">
+                  <div class="card-body">
+                    <h4 class="card-title">Chirpy</h4>
+                    <p class="card-text">This is an app for parents to help filter out content that their children see online</p>
+                    <p class="card-text">Built a Chrome extension that connects to the Chirpy site </p>
+                    <h5>Built with:</h5>
+                    <div id="social-icon">
+                      <i class="devicon-rails-plain-wordmark"></i>
+                      <i class="devicon-postgresql-plain-wordmark"></i>
+                      <i class="devicon-heroku-original-wordmark"></i>
+                      <i class="devicon-javascript-plain"></i>
+                    </div>
+                    <div class="mt-3">
+                      <a href="https://www.chirpyapp.net/" class="button-green">App</a>
+                      <a href="#" class="button-green">Github</a>
+                    </div>
+                    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                   </div>
                 </div>
               </div>
