--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <div class="col-md-6 col-lg-7 border-start">
                   <div class="card-body">
                     <h4 class="card-title">Chirpy</h4>
-                    <p class="card-text">This is an app for parents to help filter out content that their children see online</p>
-                    <p class="card-text">Built a Chrome extension that connects to the Chirpy site </p>
+                    <p class="card-text">Created an API that removes tweets if they are deemed too angry, sad, or fearful based off an IBM tone analyzer.</p>
+                    <p class="card-text">Created a Chrome extension that extracts the relevant tweet data into a JSON that is sent via a fetch request to be analyzed by the Chirpy API. By using gsub and regexp, Chirpy can also remove tweets matching any word added to a child's blocklist. On Chirpy, there is a search bar that utilizes Stimulus by targeting the HTML that lists all the articles and replaces that HTML with only articles that match what was searched for without the need for a page reload.</p>
                     <h5>Built with:</h5>
                     <div id="social-icon">
                       <i class="devicon-rails-plain-wordmark"></i>
@@ -144,9 +144,9 @@
                 </div>
                 <div class="col-md-6 col-lg-7 border-start">
                   <div class="card-body">
-                    <h4 class="card-title">Chirpy</h4>
-                    <p class="card-text">This is an app for parents to help filter out content that their children see online</p>
-                    <p class="card-text">Built a Chrome extension that connects to the Chirpy site </p>
+                    <h4 class="card-title">2Bridal</h4>
+                    <p class="card-text">This is a marketplace app for renting out used designer wedding dresses</p>
+                    <p class="card-text"></p>
                     <h5>Built with:</h5>
                     <div id="social-icon">
                       <i class="devicon-rails-plain-wordmark"></i>
@@ -155,10 +155,9 @@
                       <i class="devicon-javascript-plain"></i>
                     </div>
                     <div class="mt-3">
-                      <a href="https://www.chirpyapp.net/" class="button-green">App</a>
-                      <a href="#" class="button-green">Github</a>
+                      <a href="https://two-bridal.herokuapp.com/" class="button-green">App</a>
+                      <a href="https://github.com/angrysun/two-bridal" class="button-green">Github</a>
                     </div>
-                    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                   </div>
                 </div>
               </div>
