--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta property="og:url" content="https://www.stevenvasquez.me/" />
     <meta property="og:description" content="Fullstack developer based in Tokyo. Come and see what new projects I've been working on." />
     <meta property="og:image" content="assets/images/" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -38,7 +40,7 @@
         <h3>A little about me</h3>
         <div class="about-content">
           <p>Hi! I'm a Tokyo based Fullstack Developer originally from New York with a background in psychology and education.</p>
-          <p>I enjoy programming because it provides a good test of my problem-solving skills as well as pushing my creativity to new heights.</p>
+          <p>I enjoy programming because it provides a good test of my problem-solving skills as well as pushing my creativity to new heights. Familiar with TDD, Agile, and pair programming.</p>
           <!-- <p>On my free time, I enjoy going for a run surrounded by nature or relaxing at home playing an engaging RPG.</p> -->
           <p>Feel free to connect with me on LinkedIn!</p>
           <div>
