--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="assets/images/chirpy.png" class="d-block w-100" alt="chirpy">
+                        <img src="assets/images/2bridal.png" class="d-block w-100" alt="chirpy">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/chirpy2.png" class="d-block w-100" alt="chirpy2">
+                        <img src="assets/images/2bridal2.png" class="d-block w-100" alt="chirpy2">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/chirpy3.png" class="d-block w-100" alt="chirpy3">
+                        <img src="assets/images/2bridal3.png" class="d-block w-100" alt="chirpy3">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -147,8 +147,9 @@
                 <div class="col-md-6 col-lg-7 border-start">
                   <div class="card-body">
                     <h4 class="card-title">2Bridal</h4>
-                    <p class="card-text">This is a marketplace app for renting out used designer wedding dresses</p>
-                    <p class="card-text"></p>
+                    <p class="card-text">Marketplace app for renting out used designer wedding dresses</p>
+                    <p class="card-text">Routinely deployed and debugged 2Bridal on Heroku. Implemented the Cloudinary API to store dress and avatar images. Used
+                    JavaScript and AJAX to create a search bar that shows the correct data without a page reload.</p>
                     <h5>Built with:</h5>
                     <div id="social-icon">
                       <i class="devicon-rails-plain-wordmark"></i>
@@ -160,6 +161,63 @@
                       <a href="https://two-bridal.herokuapp.com/" class="button-green">App</a>
                       <a href="https://github.com/angrysun/two-bridal" class="button-green">Github</a>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="card mb-3" style="max-width: 1075px;">
+              <div class="row g-0">
+                <div class="col-md-6 col-lg-5">
+                  <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="assets/images/yoshino1.png" class="d-block w-100" alt="chirpy">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/yoshino2.png" class="d-block w-100" alt="chirpy2">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/yoshino3.png" class="d-block w-100" alt="chirpy3">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                      data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                      data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-7 border-start">
+                  <div class="card-body">
+                    <h4 class="card-title">Yoshino Orthodontal</h4>
+                    <p class="card-text">Website made as a freelance project for a local orthodontal clinic.</p>
+                    <p class="card-text">Leveraged the power of WordPress  </p>
+                    <h5>Built with:</h5>
+                    <div id="social-icon">
+                      <i class="devicon-wordpress-plain-wordmark"></i>
+                      <i class="devicon-css3-plain-wordmark"></i>
+                      <i class="devicon-html5-plain-wordmark"></i>
+                      <i class="devicon-javascript-plain"></i>
+                    </div>
+                    <div class="mt-3">
+                      <a href="https://yoshino-ortho.com/" class="button-green">App</a>
+                    </div>
+                    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                   </div>
                 </div>
               </div>
