--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="assets/stylesheets/style.css">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.0/devicon.min.css">
@@ -36,6 +38,10 @@
             <h1>Steven Vasquez</h1>
             <h2>Fullstack Developer</h2>
             <h2>Ruby on Rails | JavaScript</h2>
+            <div>
+              <a href="assets/stevenvasquezCV.pdf" class="button-green">My resume</a>
+            </div>
+
           </div>
         </div>
       </div>
@@ -47,8 +53,9 @@
           <!-- <p>On my free time, I enjoy going for a run surrounded by nature or relaxing at home playing an engaging RPG.</p> -->
           <p>Feel free to connect with me on LinkedIn!</p>
           <div>
-            <!-- <a href="assets/stevenvasquezCV.pdf" class="button">My resume</a> -->
             <a href="https://www.linkedin.com/in/stevenvasquez85/" id="social-icon"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/angrysun" id="social-icon"><i class="fa-brands fa-github-square"></i></a>
+            <a href="mailto:s.vasquez85@gmail.com?subject=Getting in touch" id="social-icon"><i class="fa-solid fa-square-envelope"></i></a>
           </div>
         </div>
       </div>
