--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div>
             <h1>Steven Vasquez</h1>
             <h2>Fullstack Developer</h2>
-            <h2>Ruby on Rails | JavaScript</h2>
+            <h2 class="pb-3">Ruby on Rails | JavaScript</h2>
             <div>
               <a href="assets/stevenvasquezCV.pdf" class="button-green">My resume</a>
             </div>
@@ -45,25 +45,28 @@
           </div>
         </div>
       </div>
-      <div class="centered-container" id="left">
-        <h3>A little about me</h3>
-        <div class="about-content">
-          <p>Hi! I'm a Tokyo based Fullstack Developer originally from New York with a background in psychology and education.</p>
-          <p>I enjoy programming because it provides a good test of my problem-solving skills as well as pushing my creativity to new heights. Familiar with TDD, Agile, and pair programming.</p>
-          <!-- <p>On my free time, I enjoy going for a run surrounded by nature or relaxing at home playing an engaging RPG.</p> -->
-          <p>Feel free to connect with me on LinkedIn!</p>
-          <div>
-            <a href="https://www.linkedin.com/in/stevenvasquez85/" id="social-icon"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/angrysun" id="social-icon"><i class="fa-brands fa-github-square"></i></a>
-            <a href="mailto:s.vasquez85@gmail.com?subject=Getting in touch" id="social-icon"><i class="fa-solid fa-square-envelope"></i></a>
-          </div>
+      <div class="card text-center w-100">
+        <div class="card-body">
+          <h3 class="card-title">A little about me</h3>
+          <p class="p-0">Hi! I'm a Tokyo based Fullstack Developer originally from New York City with a background in psychology and education.</p>
+          <p>I enjoy programming because it provides a good test of my problem-solving skills as well as pushing my creativity to
+          new heights.</p>
+          <p>On my free time I enjoy going for a run or making some gluten-free pizza.</p>
+          <p>Familiar with TDD, Agile, and pair programming.</p>
+          <p>Feel free to connect with me!</p>
+          <a href="https://www.linkedin.com/in/stevenvasquez85/" id="social-icon"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/angrysun" id="social-icon"><i class="fa-brands fa-github-square"></i></a>
+          <a href="mailto:s.vasquez85@gmail.com?subject=Getting in touch" id="social-icon"><i
+              class="fa-solid fa-square-envelope"></i></a>
         </div>
       </div>
-      <div class="centered-container">
-        <h3>Projects</h3>
+      <!-- <div class="centered-container" id="about">
+      </div> -->
+      <div>
+        <h3 class="text-center pt-5 pb-3">Projects</h3>
         <div class="project-container">
           <div class="project">
-            <div class="card mb-3" style="max-width: 1075px;">
+            <div class="card mb-3">
               <div class="row g-0">
                 <div class="col-md-6 col-lg-5">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -110,7 +113,7 @@
                     </div>
                     <div class="mt-3">
                       <a href="https://www.chirpyapp.net/" class="button-green">App</a>
-                      <a href="#" class="button-green">Github</a>
+                      <a href="#" class="button-green">Code</a>
                     </div>
                     <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                   </div>
@@ -119,7 +122,7 @@
             </div>
           </div>
           <div class="project">
-            <div class="card mb-3" style="max-width: 1075px;">
+            <div class="card mb-3">
               <div class="row g-0">
                 <div class="col-md-6 col-lg-5">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -133,13 +136,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="assets/images/2bridal.png" class="d-block w-100" alt="chirpy">
+                        <img src="assets/images/2bridal.png" class="d-block w-100" alt="2bridal">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/2bridal2.png" class="d-block w-100" alt="chirpy2">
+                        <img src="assets/images/2bridal2.png" class="d-block w-100" alt="2bridal2">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/2bridal3.png" class="d-block w-100" alt="chirpy3">
+                        <img src="assets/images/2bridal3.png" class="d-block w-100" alt="2bridal3">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -159,6 +162,7 @@
                     <h4 class="card-title">2Bridal</h4>
                     <p class="card-text">Marketplace app for renting out used designer wedding dresses</p>
                     <p class="card-text">Routinely deployed and debugged 2Bridal on Heroku. Implemented the Cloudinary API to store dress and avatar images. Used
+                    JavaScript and AJAX to create a search bar that shows the correct data without a page reload.Routinely deployed and debugged 2Bridal on Heroku. Implemented the Cloudinary API to store dress and avatar images. Used
                     JavaScript and AJAX to create a search bar that shows the correct data without a page reload.</p>
                     <h5>Built with:</h5>
                     <div id="social-icon">
@@ -169,7 +173,7 @@
                     </div>
                     <div class="mt-3">
                       <a href="https://two-bridal.herokuapp.com/" class="button-green">App</a>
-                      <a href="https://github.com/angrysun/two-bridal" class="button-green">Github</a>
+                      <a href="https://github.com/angrysun/two-bridal" class="button-green">Code</a>
                     </div>
                   </div>
                 </div>
@@ -177,7 +181,7 @@
             </div>
           </div>
           <div class="project">
-            <div class="card mb-3" style="max-width: 1075px;">
+            <div class="card mb-3">
               <div class="row g-0">
                 <div class="col-md-6 col-lg-5">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -191,13 +195,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="assets/images/yoshino1.png" class="d-block w-100" alt="chirpy">
+                        <img src="assets/images/yoshino1.png" class="d-block w-100" alt="yoshino-ortho">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/yoshino2.png" class="d-block w-100" alt="chirpy2">
+                        <img src="assets/images/yoshino2.png" class="d-block w-100" alt="yoshino-ortho2">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/yoshino3.png" class="d-block w-100" alt="chirpy3">
+                        <img src="assets/images/yoshino3.png" class="d-block w-100" alt="yoshino-ortho3">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
