--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             <div>
               <a href="assets/stevenvasquezCV.pdf" class="button-green">My resume</a>
             </div>
-
           </div>
         </div>
       </div>
@@ -51,7 +50,7 @@
           <p class="p-0">Hi! I'm a Tokyo based Fullstack Developer originally from New York City with a background in psychology and education.</p>
           <p>I enjoy programming because it provides a good test of my problem-solving skills as well as pushing my creativity to
           new heights.</p>
-          <p>On my free time I enjoy going for a run or making some gluten-free pizza.</p>
+          <p>On my free time I enjoy going for a run or making some nachos or pizza!</p>
           <p>Familiar with TDD, Agile, and pair programming.</p>
           <p>Feel free to connect with me!</p>
           <a href="https://www.linkedin.com/in/stevenvasquez85/" id="social-icon"><i class="fa-brands fa-linkedin"></i></a>
@@ -68,7 +67,7 @@
           <div class="project">
             <div class="card mb-3">
               <div class="row g-0">
-                <div class="col-md-6 col-lg-5">
+                <div class="col-xl-6">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -99,11 +98,12 @@
                     </button>
                   </div>
                 </div>
-                <div class="col-md-6 col-lg-7 border-start">
+                <div class="col-xl-6 border-start">
                   <div class="card-body">
                     <h4 class="card-title">Chirpy</h4>
-                    <p class="card-text">Created an API that removes tweets if they are deemed too angry, sad, or fearful based off an IBM tone analyzer.</p>
-                    <p class="card-text">Created a Chrome extension that extracts the relevant tweet data into a JSON that is sent via a fetch request to be analyzed by the Chirpy API. By using gsub and regexp, Chirpy can also remove tweets matching any word added to a child's blocklist. On Chirpy, there is a search bar that utilizes Stimulus by targeting the HTML that lists all the articles and replaces that HTML with only articles that match what was searched for without the need for a page reload.</p>
+                    <p class="card-text">Built an API that removes tweets if they are deemed too angry, sad, or fearful based off an IBM tone analyzer. Created a Chrome extension that extracts the relevant tweet data into a JSON that is sent via a fetch request to be
+                    analyzed by the Chirpy API. By using gsub and regexp, Chirpy can also remove tweets matching any word added to a child's
+                    blocklist. Extension is currently available on the Chrome Web Store.</p>
                     <h5>Built with:</h5>
                     <div id="social-icon">
                       <i class="devicon-rails-plain-wordmark"></i>
@@ -124,7 +124,7 @@
           <div class="project">
             <div class="card mb-3">
               <div class="row g-0">
-                <div class="col-md-6 col-lg-5">
+                <div class="col-xl-6">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -157,13 +157,12 @@
                     </button>
                   </div>
                 </div>
-                <div class="col-md-6 col-lg-7 border-start">
+                <div class="col-xl-6 border-start">
                   <div class="card-body">
                     <h4 class="card-title">2Bridal</h4>
-                    <p class="card-text">Marketplace app for renting out used designer wedding dresses</p>
-                    <p class="card-text">Routinely deployed and debugged 2Bridal on Heroku. Implemented the Cloudinary API to store dress and avatar images. Used
-                    JavaScript and AJAX to create a search bar that shows the correct data without a page reload.Routinely deployed and debugged 2Bridal on Heroku. Implemented the Cloudinary API to store dress and avatar images. Used
-                    JavaScript and AJAX to create a search bar that shows the correct data without a page reload.</p>
+                    <p class="card-text">Marketplace app for renting used designer wedding dresses. Routinely deployed and debugged 2Bridal on Heroku. Used
+                    JavaScript and AJAX to create a search bar that shows the correct data without a page reload. Utilizes the JS plugin flatpickr so renters can see a clickable calendar to easily choose a start and end date for their rented dress.
+                    Created a function to calculate the cost of a dress from its rental period.</p>
                     <h5>Built with:</h5>
                     <div id="social-icon">
                       <i class="devicon-rails-plain-wordmark"></i>
@@ -183,7 +182,7 @@
           <div class="project">
             <div class="card mb-3">
               <div class="row g-0">
-                <div class="col-md-6 col-lg-5">
+                <div class="col-xl-6">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -216,11 +215,12 @@
                     </button>
                   </div>
                 </div>
-                <div class="col-md-6 col-lg-7 border-start">
+                <div class="col-xl-6 border-start">
                   <div class="card-body">
-                    <h4 class="card-title">Yoshino Orthodontal</h4>
-                    <p class="card-text">Website made as a freelance project for a local orthodontal clinic.</p>
-                    <p class="card-text">Leveraged the power of WordPress  </p>
+                    <h4 class="card-title">Yoshino Orthodontic</h4>
+                    <p class="card-text">Website made for a local orthodontic clinic. Leveraged the power of WordPress and the Gutenberg editor to
+                    manipulate rows and columns and make the site responsive on all devices. Fine tuned the width and height of cards, boxes, and text to be similarly leveled and have a clean look.
+                    Edited the opacity and size of banner images as well as adding text shadow to words so that they stood out.</p>
                     <h5>Built with:</h5>
                     <div id="social-icon">
                       <i class="devicon-wordpress-plain-wordmark"></i>
