--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" href="assets/stylesheets/style.css">
-    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.0/devicon.min.css">
+    <link rel="stylesheet" href="assets/stylesheets/style.css">
     <script src="https://kit.fontawesome.com/c0265d2c39.js" crossorigin="anonymous"></script>
   </head>
 
@@ -44,7 +44,7 @@
           </div>
         </div>
       </div>
-      <div class="card text-center w-100">
+      <div class="card text-center shadow-sm w-100">
         <div class="card-body">
           <h3 class="card-title">A little about me</h3>
           <p class="p-0">Hi! I'm a Tokyo based Fullstack Developer originally from New York City with a background in psychology and education.</p>
@@ -62,10 +62,10 @@
       <!-- <div class="centered-container" id="about">
       </div> -->
       <div>
-        <h3 class="text-center pt-5 pb-3">Projects</h3>
+        <h3 class="text-center pt-5 pb-2">Projects</h3>
         <div class="project-container">
           <div class="project">
-            <div class="card mb-3">
+            <div class="card shadow-sm mb-4" data-aos="fade-up">
               <div class="row g-0">
                 <div class="col-xl-6">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -105,7 +105,7 @@
                     analyzed by the Chirpy API. By using gsub and regexp, Chirpy can also remove tweets matching any word added to a child's
                     blocklist. Extension is currently available on the Chrome Web Store.</p>
                     <h5>Built with:</h5>
-                    <div id="social-icon">
+                    <div id="social-icon" data-aos="fade-left">
                       <i class="devicon-rails-plain-wordmark"></i>
                       <i class="devicon-postgresql-plain-wordmark"></i>
                       <i class="devicon-heroku-original-wordmark"></i>
@@ -122,7 +122,7 @@
             </div>
           </div>
           <div class="project">
-            <div class="card mb-3">
+            <div class="card shadow-sm mb-4" data-aos="fade-up">
               <div class="row g-0">
                 <div class="col-xl-6">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -164,7 +164,7 @@
                     JavaScript and AJAX to create a search bar that shows the correct data without a page reload. Utilizes the JS plugin flatpickr so renters can see a clickable calendar to easily choose a start and end date for their rented dress.
                     Created a function to calculate the cost of a dress from its rental period.</p>
                     <h5>Built with:</h5>
-                    <div id="social-icon">
+                    <div id="social-icon" data-aos="fade-left">
                       <i class="devicon-rails-plain-wordmark"></i>
                       <i class="devicon-postgresql-plain-wordmark"></i>
                       <i class="devicon-heroku-original-wordmark"></i>
@@ -180,7 +180,7 @@
             </div>
           </div>
           <div class="project">
-            <div class="card mb-3">
+            <div class="card shadow-sm mb-4" data-aos="fade-up">
               <div class="row g-0">
                 <div class="col-xl-6">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -222,7 +222,7 @@
                     manipulate rows and columns and make the site responsive on all devices. Fine tuned the width and height of cards, boxes, and text to be similarly leveled and have a clean look.
                     Edited the opacity and size of banner images as well as adding text shadow to words so that they stood out.</p>
                     <h5>Built with:</h5>
-                    <div id="social-icon">
+                    <div id="social-icon" data-aos="fade-left">
                       <i class="devicon-wordpress-plain-wordmark"></i>
                       <i class="devicon-css3-plain-wordmark"></i>
                       <i class="devicon-html5-plain-wordmark"></i>
@@ -241,7 +241,10 @@
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-      <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
     </div>
   </body>
 </html>
