--- a/index.html
+++ b/index.html
@@ -31,20 +31,22 @@
     <div class="container py-5">
       <div class="centered-container">
         <div class="centered-contents">
-          <div>
+          <div id="element1">
             <img src="assets/images/profile.JPG" class="avatar" alt="avatar">
           </div>
-          <div>
-            <h1>Steven Vasquez</h1>
-            <h2>Fullstack Developer</h2>
-            <h2 class="pb-3">Ruby on Rails | JavaScript</h2>
-            <div>
+          <div id="element2">
+            <span>
+              <h1>Steven Vasquez</h1>
+              <h2>Fullstack Developer</h2>
+              <h2 class="pb-3">Ruby on Rails | JavaScript</h2>
+            </span>
+            <div id="element3">
               <a href="assets/stevenvasquezCV.pdf" class="button-green">My resume</a>
             </div>
           </div>
         </div>
       </div>
-      <div class="card text-center shadow-sm w-100">
+      <div class="card text-center shadow-sm w-100" data-aos="fade-up">
         <div class="card-body">
           <h3 class="card-title">A little about me</h3>
           <p class="p-0">Hi! I'm a Tokyo based Fullstack Developer originally from New York City with a background in psychology and education.</p>
@@ -59,12 +61,10 @@
               class="fa-solid fa-square-envelope"></i></a>
         </div>
       </div>
-      <!-- <div class="centered-container" id="about">
-      </div> -->
       <div>
-        <h3 class="text-center pt-5 pb-2">Projects</h3>
+        <h3 class="text-center pt-5 pb-2" data-aos="fade-up">Projects</h3>
         <div class="project-container">
-          <div class="project">
+          <div class="project pb-4">
             <div class="card shadow-sm mb-4" data-aos="fade-up">
               <div class="row g-0">
                 <div class="col-xl-6">
@@ -105,11 +105,11 @@
                     analyzed by the Chirpy API. By using gsub and regexp, Chirpy can also remove tweets matching any word added to a child's
                     blocklist. Extension is currently available on the Chrome Web Store.</p>
                     <h5>Built with:</h5>
-                    <div id="social-icon" data-aos="fade-left">
-                      <i class="devicon-rails-plain-wordmark"></i>
-                      <i class="devicon-postgresql-plain-wordmark"></i>
-                      <i class="devicon-heroku-original-wordmark"></i>
-                      <i class="devicon-javascript-plain"></i>
+                    <div id="devcon" data-aos="fade-left">
+                      <i class="devicon-rails-plain-wordmark" id="rails"></i>
+                      <i class="devicon-postgresql-plain-wordmark" id="postgres"></i>
+                      <i class="devicon-heroku-original-wordmark" id="heroku"></i>
+                      <i class="devicon-javascript-plain" id="javascript"></i>
                     </div>
                     <div class="mt-3">
                       <a href="https://www.chirpyapp.net/" class="button-green">App</a>
@@ -121,9 +121,28 @@
               </div>
             </div>
           </div>
-          <div class="project">
+          <div class="project pb-4">
             <div class="card shadow-sm mb-4" data-aos="fade-up">
               <div class="row g-0">
+                <div class="col-xl-6 border-start">
+                  <div class="card-body">
+                    <h4 class="card-title">2Bridal</h4>
+                    <p class="card-text">Marketplace app for renting used designer wedding dresses. Routinely deployed and debugged 2Bridal on Heroku. Used
+                    JavaScript and AJAX to create a search bar that shows the correct data without a page reload. Utilizes the JS plugin flatpickr so renters can see a clickable calendar to easily choose a start and end date for their rented dress.
+                    Created a function to calculate the cost of a dress from its rental period.</p>
+                    <h5>Built with:</h5>
+                    <div id="devcon" data-aos="fade-right">
+                      <i class="devicon-rails-plain-wordmark" id="rails"></i>
+                      <i class="devicon-postgresql-plain-wordmark" id="postgres"></i>
+                      <i class="devicon-heroku-original-wordmark" id="heroku"></i>
+                      <i class="devicon-javascript-plain" id="javascript"></i>
+                    </div>
+                    <div class="mt-3">
+                      <a href="https://two-bridal.herokuapp.com/" class="button-green">App</a>
+                      <a href="https://github.com/angrysun/two-bridal" class="button-green">Code</a>
+                    </div>
+                  </div>
+                </div>
                 <div class="col-xl-6">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
@@ -157,29 +176,10 @@
                     </button>
                   </div>
                 </div>
-                <div class="col-xl-6 border-start">
-                  <div class="card-body">
-                    <h4 class="card-title">2Bridal</h4>
-                    <p class="card-text">Marketplace app for renting used designer wedding dresses. Routinely deployed and debugged 2Bridal on Heroku. Used
-                    JavaScript and AJAX to create a search bar that shows the correct data without a page reload. Utilizes the JS plugin flatpickr so renters can see a clickable calendar to easily choose a start and end date for their rented dress.
-                    Created a function to calculate the cost of a dress from its rental period.</p>
-                    <h5>Built with:</h5>
-                    <div id="social-icon" data-aos="fade-left">
-                      <i class="devicon-rails-plain-wordmark"></i>
-                      <i class="devicon-postgresql-plain-wordmark"></i>
-                      <i class="devicon-heroku-original-wordmark"></i>
-                      <i class="devicon-javascript-plain"></i>
-                    </div>
-                    <div class="mt-3">
-                      <a href="https://two-bridal.herokuapp.com/" class="button-green">App</a>
-                      <a href="https://github.com/angrysun/two-bridal" class="button-green">Code</a>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
-          <div class="project">
+          <div class="project pb-4">
             <div class="card shadow-sm mb-4" data-aos="fade-up">
               <div class="row g-0">
                 <div class="col-xl-6">
@@ -222,11 +222,11 @@
                     manipulate rows and columns and make the site responsive on all devices. Fine tuned the width and height of cards, boxes, and text to be similarly leveled and have a clean look.
                     Edited the opacity and size of banner images as well as adding text shadow to words so that they stood out.</p>
                     <h5>Built with:</h5>
-                    <div id="social-icon" data-aos="fade-left">
-                      <i class="devicon-wordpress-plain-wordmark"></i>
-                      <i class="devicon-css3-plain-wordmark"></i>
-                      <i class="devicon-html5-plain-wordmark"></i>
-                      <i class="devicon-javascript-plain"></i>
+                    <div id="devcon" data-aos="fade-left">
+                      <i class="devicon-wordpress-plain-wordmark" id="wordpress"></i>
+                      <i class="devicon-css3-plain-wordmark" id="css"></i>
+                      <i class="devicon-html5-plain-wordmark" id="html"></i>
+                      <i class="devicon-javascript-plain" id="javascript"></i>
                     </div>
                     <div class="mt-3">
                       <a href="https://yoshino-ortho.com/" class="button-green">App</a>
