site image for social media added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.stevenvasquez.me/" />
     <meta property="og:description" content="Fullstack developer based in Tokyo. Come and see what new projects I've been working on." />
-    <meta property="og:image" content="assets/images/" />
+    <meta property="og:image" content="assets/images/site-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
