replaced aos fade-right with zoom-in

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     analyzed by the Chirpy API. By using gsub and regexp, Chirpy can also remove tweets matching any word added to a child's
                     blocklist. Extension is currently available on the Chrome Web Store.</p>
                     <h5>Built with:</h5>
-                    <div id="devcon" data-aos="fade-left">
+                    <div id="devcon" data-aos="zoom-in">
                       <i class="devicon-rails-plain-wordmark" id="rails"></i>
                       <i class="devicon-postgresql-plain-wordmark" id="postgres"></i>
                       <i class="devicon-heroku-original-wordmark" id="heroku"></i>
@@ -140,7 +140,7 @@
                     JavaScript and AJAX to create a search bar that shows the correct data without a page reload. Utilizes the JS plugin flatpickr so renters can see a clickable calendar to easily choose a start and end date for their rented dress.
                     Created a function to calculate the cost of a dress from its rental period.</p>
                     <h5>Built with:</h5>
-                    <div id="devcon" data-aos="fade-right">
+                    <div id="devcon" data-aos="zoom-in">
                       <i class="devicon-rails-plain-wordmark" id="rails"></i>
                       <i class="devicon-postgresql-plain-wordmark" id="postgres"></i>
                       <i class="devicon-heroku-original-wordmark" id="heroku"></i>
@@ -153,13 +153,13 @@
                   </div>
                 </div>
                 <div class="col-xl-6" id="start">
-                  <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                  <div id="carouselExampleIndicatorsTwo" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                      <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                      <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="1"
                         aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                      <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner">
@@ -173,12 +173,12 @@
                         <img src="assets/images/2bridal4.png" class="d-block w-100" alt="2bridal4">
                       </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsTwo"
                       data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicatorsTwo"
                       data-bs-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Next</span>
@@ -192,13 +192,13 @@
             <div class="card shadow-sm mb-4" data-aos="fade-up">
               <div class="row g-0">
                 <div class="col-xl-6">
-                  <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                  <div id="carouselExampleIndicatorsThree" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                      <button type="button" data-bs-target="#carouselExampleIndicatorsThree" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                      <button type="button" data-bs-target="#carouselExampleIndicatorsThree" data-bs-slide-to="1"
                         aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                      <button type="button" data-bs-target="#carouselExampleIndicatorsThree" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner">
@@ -212,12 +212,12 @@
                         <img src="assets/images/yoshino3.png" class="d-block w-100" alt="yoshino-ortho3">
                       </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsThree"
                       data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicatorsThree"
                       data-bs-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Next</span>
@@ -231,7 +231,7 @@
                     manipulate rows and columns and make the site responsive on all devices. Fine tuned the width and height of cards, boxes, and text to be similarly leveled and have a clean look.
                     Edited the opacity and size of banner images as well as adding text shadow to words so that they stood out.</p>
                     <h5>Built with:</h5>
-                    <div id="devcon" data-aos="fade-left">
+                    <div id="devcon" data-aos="zoom-in">
                       <i class="devicon-wordpress-plain-wordmark" id="wordpress"></i>
                       <i class="devicon-css3-plain-wordmark" id="css"></i>
                       <i class="devicon-html5-plain-wordmark" id="html"></i>
@@ -255,17 +255,6 @@
         AOS.init({
             duration: 2000,
           });
-      </script>
-      <script>
-        var docWidth = document.documentElement.offsetWidth;
-          [].forEach.call(
-            document.querySelectorAll('*'),
-            function (el) {
-              if (el.offsetWidth > docWidth) {
-                console.log(el);
-              }
-            }
-          );
       </script>
     </div>
   </body>
