added in a github link and cleaned up some code

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.0/devicon.min.css">
     <link rel="stylesheet" href="assets/stylesheets/style.css">
     <script src="https://kit.fontawesome.com/c0265d2c39.js" crossorigin="anonymous"></script>
+
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y862EDPCS6"></script>
     <script>
@@ -122,9 +123,8 @@
                     </div>
                     <div class="mt-3">
                       <a href="https://www.chirpyapp.net/" class="button-green">App</a>
-                      <a href="#" class="button-green">Code</a>
+                      <a href="https://github.com/angrysun" class="button-green">Code</a>
                     </div>
-                    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                   </div>
                 </div>
               </div>
@@ -240,7 +240,6 @@
                     <div class="mt-3">
                       <a href="https://yoshino-ortho.com/" class="button-green">App</a>
                     </div>
-                    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                   </div>
                 </div>
               </div>
