make all page links open in new tab

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <h2 class="pb-3">Ruby on Rails | JavaScript</h2>
             </span>
             <div id="element3">
-              <a href="assets/stevenvasquezCV.pdf" class="button-green">My resume</a>
+              <a href="assets/stevenvasquezCV.pdf" target="_blank" class="button-green">My resume</a>
             </div>
           </div>
         </div>
@@ -66,9 +66,9 @@
           <p>On my free time I enjoy going for a run or making some nachos or pizza!</p>
           <p>Familiar with TDD, Agile, and pair programming.</p>
           <p>Feel free to connect with me!</p>
-          <a href="https://www.linkedin.com/in/stevenvasquez85/" id="social-icon"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://github.com/angrysun" id="social-icon"><i class="fa-brands fa-github-square"></i></a>
-          <a href="mailto:s.vasquez85@gmail.com?subject=Getting in touch" id="social-icon"><i
+          <a href="https://www.linkedin.com/in/stevenvasquez85/" target="_blank" id="social-icon"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/angrysun" target="_blank" id="social-icon"><i class="fa-brands fa-github-square"></i></a>
+          <a href="mailto:s.vasquez85@gmail.com?subject=Getting in touch" target="_blank" id="social-icon"><i
               class="fa-solid fa-square-envelope"></i></a>
         </div>
       </div>
@@ -123,8 +123,8 @@
                       <i class="devicon-javascript-plain" id="javascript"></i>
                     </div>
                     <div class="mt-3">
-                      <a href="https://www.chirpyapp.net/" class="button-green">App</a>
-                      <a href="https://github.com/angrysun" class="button-green">Code</a>
+                      <a href="https://www.chirpyapp.net/" target="_blank" class="button-green">App</a>
+                      <a href="https://github.com/angrysun" target="_blank" class="button-green">Code</a>
                     </div>
                   </div>
                 </div>
@@ -148,8 +148,8 @@
                       <i class="devicon-javascript-plain" id="javascript"></i>
                     </div>
                     <div class="mt-3">
-                      <a href="https://two-bridal.herokuapp.com/" class="button-green">App</a>
-                      <a href="https://github.com/angrysun/two-bridal" class="button-green">Code</a>
+                      <a href="https://two-bridal.herokuapp.com/" target="_blank" class="button-green">App</a>
+                      <a href="https://github.com/angrysun/two-bridal" target="_blank" class="button-green">Code</a>
                     </div>
                   </div>
                 </div>
@@ -239,7 +239,7 @@
                       <i class="devicon-javascript-plain" id="javascript"></i>
                     </div>
                     <div class="mt-3">
-                      <a href="https://yoshino-ortho.com/" class="button-green">App</a>
+                      <a href="https://yoshino-ortho.com/" target="_blank" class="button-green">App</a>
                     </div>
                   </div>
                 </div>
