changed file location

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <h2 class="pb-3">Ruby on Rails | JavaScript</h2>
             </span>
             <div id="element3">
-              <a href="assets/stevenvasquezCV.pdf" target="_blank" class="button-green">My resume</a>
+              <a href="stevenvasquezCV.pdf" target="_blank" class="button-green">My resume</a>
             </div>
           </div>
         </div>
