updated github chirpy url

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="mt-3">
                       <a href="https://www.chirpyapp.net/" target="_blank" class="button-green">App</a>
-                      <a href="https://github.com/angrysun" target="_blank" class="button-green">Code</a>
+                      <a href="https://github.com/angrysun/chirpy" target="_blank" class="button-green">Code</a>
                     </div>
                   </div>
                 </div>
