--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <p class="p-0">Hi! I'm a Tokyo based Fullstack Developer originally from New York City with a background in psychology and education.</p>
           <p>I enjoy programming because it provides a good test of my problem-solving skills as well as pushing my creativity to
           new heights.</p>
-          <p>On my free time I enjoy going for a run or making some nachos or pizza!</p>
+          <p>In my free time I enjoy going for a run or making some nachos or pizza!</p>
           <p>Familiar with TDD, Agile, and pair programming.</p>
           <p>Feel free to connect with me!</p>
           <a href="https://www.linkedin.com/in/stevenvasquez85/" target="_blank" id="social-icon"><i class="fa-brands fa-linkedin"></i></a>
