added line for added security on older browsers

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p>Feel free to connect with me!</p>
           <a href="https://www.linkedin.com/in/stevenvasquez85/" target="_blank" id="social-icon"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://github.com/angrysun" target="_blank" id="social-icon"><i class="fa-brands fa-github-square"></i></a>
-          <a href="mailto:s.vasquez85@gmail.com?subject=Getting in touch" target="_blank" id="social-icon"><i
+          <a href="mailto:s.vasquez85@gmail.com?subject=Getting in touch" target="_blank" rel="noreferrer" id="social-icon"><i
               class="fa-solid fa-square-envelope"></i></a>
         </div>
       </div>
